uploading rebuttal asked results

--- a/experiments/neurips/results.ipynb
+++ b/experiments/neurips/results.ipynb
@@ -63,7 +63,7 @@
     "import os\n",
     "from functools import partial\n",
     "\n",
-    "export_dir = '~/Dropbox/icmlhistnet'\n",
+    "export_dir = '~/Dropbox/neuripshistnet'\n",
     "\n",
     "path = \"results\"\n",
     "\n",
@@ -184,29 +184,33 @@
      "text": [
       "\\begin{tabular}{r|rr}\n",
       "\\toprule\n",
-      " & AE & RAE \\\\\n",
+      "{} & {AE} & {RAE} \\\\\n",
       "\\midrule\n",
-      "Deepsets (avg) & 0.02779 $\\pm$ 0.02105 & 0.12686 $\\pm$ 0.22817 \\\\\n",
-      "Deepsets (max) & 0.04991 $\\pm$ 0.04167 & 0.21830 $\\pm$ 0.48828 \\\\\n",
-      "Deepsets (median) & 0.02919 $\\pm$ 0.02273 & 0.13887 $\\pm$ 0.25631 \\\\\n",
-      "SetTransformers & \\ddag{0.02246 $\\pm$ 0.01717} & \\ddag{0.10958 $\\pm$ 0.26205} \\\\\n",
-      "HistNet & \\textbf{0.02236 $\\pm$ 0.01709} & \\textbf{0.10707 $\\pm$ 0.23312} \\\\\n",
-      "CC & 0.09160 $\\pm$ 0.05540 & 1.08400 $\\pm$ 4.31090 \\\\\n",
-      "PCC & 0.11664 $\\pm$ 0.06978 & 1.39402 $\\pm$ 5.62123 \\\\\n",
-      "ACC & 0.03716 $\\pm$ 0.02936 & 0.17020 $\\pm$ 0.50800 \\\\\n",
-      "PACC & 0.02985 $\\pm$ 0.02258 & 0.15218 $\\pm$ 0.46440 \\\\\n",
-      "HDy & 0.02814 $\\pm$ 0.02212 & 0.14514 $\\pm$ 0.45621 \\\\\n",
-      "QuaNet & 0.03418 $\\pm$ 0.02528 & 0.31764 $\\pm$ 1.35237 \\\\\n",
-      "EMQ-BCTS & 0.02689 $\\pm$ 0.02094 & 0.11828 $\\pm$ 0.25065 \\\\\n",
+      "Deepsets (avg) & 0.03263 $\\pm$ 0.02488 & 0.14692 $\\pm$ 0.28142 \\\\\n",
+      "Deepsets (max) & 0.05701 $\\pm$ 0.04911 & 0.22865 $\\pm$ 0.46184 \\\\\n",
+      "Deepsets (median) & 0.04569 $\\pm$ 0.03578 & 0.19327 $\\pm$ 0.31328 \\\\\n",
+      "SetTransformers & 0.03681 $\\pm$ 0.02735 & 0.15534 $\\pm$ 0.20086 \\\\\n",
+      "HistNetQ & \\textbf{0.02786 $\\pm$ 0.02060} & \\textbf{0.12654 $\\pm$ 0.24640} \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
      ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '~/Dropbox/neuripshistnet/tables/t1a_table.tex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb Cell 7\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://localhost:8080/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m t1a_table,_ \u001b[39m=\u001b[39m show_results_table(experiment_names\u001b[39m=\u001b[39mexperiment_names, base_path\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m, include_std\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,error_measures\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mAE\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mRAE\u001b[39m\u001b[39m'\u001b[39m], row_names\u001b[39m=\u001b[39mrow_names)\n\u001b[1;32m      <a href='vscode-notebook-cell://localhost:8080/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(t1a_table)\n\u001b[0;32m----> <a href='vscode-notebook-cell://localhost:8080/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(export_dir,\u001b[39m'\u001b[39;49m\u001b[39mtables/t1a_table.tex\u001b[39;49m\u001b[39m'\u001b[39;49m),\u001b[39m'\u001b[39;49m\u001b[39mw\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      <a href='vscode-notebook-cell://localhost:8080/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     f\u001b[39m.\u001b[39mwrite(t1a_table)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '~/Dropbox/neuripshistnet/tables/t1a_table.tex'"
+     ]
     }
    ],
    "source": [
-    "experiment_names = [\"deepsets_avg_T1A\",\"deepsets_max_T1A\",\"deepsets_median_T1A\",\"settransformers_T1A\",\"histnet_hard_T1A\",\"CC_T1A\",\"PCC_T1A\",\"ACC_T1A\",\"PACC_T1A\",\"HDy_T1A\",\"QuaNet_T1A\",\"EMQ_BCTS_T1A\"]\n",
-    "row_names = [\"Deepsets (avg)\",\"Deepsets (max)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ\",\"CC\",\"PCC\",\"ACC\",\"PACC\",\"HDy\",\"QuaNet\",\"EMQ-BCTS\"]\n",
+    "experiment_names = [\"deepsets_avg_T1A\",\"deepsets_max_T1A\",\"deepsets_median_T1A\",\"settransformers_T1A\",\"histnet_hard_T1A\"]\n",
+    "row_names = [\"Deepsets (avg)\",\"Deepsets (max)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ\"]\n",
     "t1a_table,_ = show_results_table(experiment_names=experiment_names, base_path='', include_std=True,error_measures=['AE','RAE'], row_names=row_names)\n",
     "print(t1a_table)\n",
     "with open(os.path.join(export_dir,'tables/t1a_table.tex'),'w') as f:\n",
@@ -222,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,27 +235,32 @@
      "text": [
       "\\begin{tabular}{r|rr}\n",
       "\\toprule\n",
-      " & AE & RAE \\\\\n",
+      "{} & {AE} & {RAE} \\\\\n",
       "\\midrule\n",
-      "Deepsets (avg) & 0.01283 $\\pm$ 0.00379 & 0.99542 $\\pm$ 0.65778 \\\\\n",
-      "Deepsets (max) & 0.02766 $\\pm$ 0.00515 & 1.46464 $\\pm$ 1.02644 \\\\\n",
-      "Deepsets (median) & 0.01429 $\\pm$ 0.00432 & 0.84427 $\\pm$ 0.54286 \\\\\n",
-      "SetTransformers & 0.03847 $\\pm$ 0.00779 & 1.67475 $\\pm$ 1.42750 \\\\\n",
-      "HistNetQ & \\textbf{0.01070 $\\pm$ 0.00367} & \\textbf{0.75739 $\\pm$ 0.48891} \\\\\n",
-      "CC & 0.01406 $\\pm$ 0.00295 & 1.89365 $\\pm$ 1.18732 \\\\\n",
-      "PCC & 0.01711 $\\pm$ 0.00332 & 2.26462 $\\pm$ 1.41627 \\\\\n",
-      "ACC & 0.01841 $\\pm$ 0.00437 & 1.42134 $\\pm$ 1.26971 \\\\\n",
-      "PACC & 0.01578 $\\pm$ 0.00379 & 1.30538 $\\pm$ 0.98837 \\\\\n",
-      "EMQ-BCTS & 0.01174 $\\pm$ 0.00305 & 0.93721 $\\pm$ 0.81732 \\\\\n",
+      "Deepsets (avg) & 0.04488 $\\pm$ 0.00749 & 1.50290 $\\pm$ 1.43556 \\\\\n",
+      "Deepsets (median) & \\textbf{0.01855 $\\pm$ 0.00600} & \\textbf{1.04310 $\\pm$ 0.73204} \\\\\n",
+      "SetTransformers & 0.03113 $\\pm$ 0.00395 & 4.24157 $\\pm$ 2.66019 \\\\\n",
+      "HistNetQ & 0.04453 $\\pm$ 0.00763 & 1.51080 $\\pm$ 1.45367 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
      ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '~/Dropbox/neuripshistnet/tables/t1b_table.tex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb Cell 9\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://localhost:8080/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m t1b_table,_\u001b[39m=\u001b[39mshow_results_table(experiment_names,include_std\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,row_names\u001b[39m=\u001b[39mrow_names)\n\u001b[1;32m      <a href='vscode-notebook-cell://localhost:8080/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(t1b_table)\n\u001b[0;32m----> <a href='vscode-notebook-cell://localhost:8080/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(export_dir,\u001b[39m'\u001b[39;49m\u001b[39mtables/t1b_table.tex\u001b[39;49m\u001b[39m'\u001b[39;49m),\u001b[39m'\u001b[39;49m\u001b[39mw\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      <a href='vscode-notebook-cell://localhost:8080/media/nas/pgonzalez/a2032/experiments/icml/results.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     f\u001b[39m.\u001b[39mwrite(t1b_table)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '~/Dropbox/neuripshistnet/tables/t1b_table.tex'"
+     ]
     }
    ],
    "source": [
-    "experiment_names = [\"deepsets_avg_T1B\",\"deepsets_max_T1B\",\"deepsets_median_T1B\",\"settransformers_T1B\",\"histnet_hard_T1B_64bins\",\"CC_T1B\",\"PCC_T1B\",\"ACC_T1B\",\"PACC_T1B\",\"EMQ_BCTS_T1B\"]\n",
-    "row_names = [\"Deepsets (avg)\",\"Deepsets (max)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ\",\"CC\",\"PCC\",\"ACC\",\"PACC\",\"EMQ-BCTS\"]\n",
+    "experiment_names = [\"deepsets_avg_T1B\",\"deepsets_median_T1B\",\"settransformers_T1B\",\"histnet_hard_T1B_64bins\"]\n",
+    "row_names = [\"Deepsets (avg)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ\"]\n",
     "t1b_table,_=show_results_table(experiment_names,include_std=True,row_names=row_names)\n",
     "print(t1b_table)\n",
     "with open(os.path.join(export_dir,'tables/t1b_table.tex'),'w') as f:\n",
@@ -943,7 +952,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "4fba9110b1a4ec95baa236356b4366c963be065d6fde289654bed570a6fc51de"
+    "hash": "4c8014f73ddd10ff49ad5404a22c3da7cfba1832c468d85b8f66804bcea46389"
    }
   }
  },
