--- a/experiments/tnnls/results.ipynb
+++ b/experiments/tnnls/results.ipynb
@@ -63,7 +63,7 @@
     "import os\n",
     "from functools import partial\n",
     "\n",
-    "export_dir = '~/Dropbox/neuripshistnet'\n",
+    "export_dir = '/home/pgonzalez/Dropbox/tnnlshistnet'\n",
     "\n",
     "path = \"results\"\n",
     "\n",
@@ -121,6 +121,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,6 +146,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -169,6 +171,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Results T1A (Ablation study)\n",
+    "Results without sample mixer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_names = [\"deepsets_avg_T1A_ablation\",\"deepsets_max_T1A_ablation\",\"deepsets_median_T1A_ablation\",\"settransformers_T1A_ablation\",\"histnet_hard_T1A_ablation\"]\n",
+    "row_names = [\"Deepsets (avg)\",\"Deepsets (max)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ\"]\n",
+    "t1a_table,_ = show_results_table(experiment_names=experiment_names, base_path='', include_std=True,error_measures=['AE','RAE'], row_names=row_names)\n",
+    "print(t1a_table)\n",
+    "with open(os.path.join(export_dir,'tables/t1a_ablation_table.tex'),'w') as f:\n",
+    "    f.write(t1a_table)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Results T1B"
    ]
   },
@@ -178,8 +203,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_names = [\"deepsets_avg_T1B\",\"deepsets_median_T1B\",\"settransformers_T1B\",\"histnet_hard_T1B_64bins\"]\n",
-    "row_names = [\"Deepsets (avg)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ\"]\n",
+    "experiment_names = [\"deepsets_avg_T1B\",\"deepsets_max_T1B\",\"deepsets_median_T1B\",\"settransformers_T1B\",\"histnet_hard_T1B_64bits\"]\n",
+    "row_names = [\"Deepsets (avg)\",\"Deepsets (max)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ (Hard 32 bins)\",\"HistNetQ (Hard 64 bins)\"]\n",
     "t1b_table,_=show_results_table(experiment_names,include_std=True,row_names=row_names)\n",
     "print(t1b_table)\n",
     "with open(os.path.join(export_dir,'tables/t1b_table.tex'),'w') as f:\n",
@@ -187,6 +212,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results T1B (Ablation study)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_names = [\"deepsets_avg_T1B_ablation\",\"deepsets_max_T1B_ablation\",\"deepsets_median_T1B_ablation\",\"settransformers_T1B_ablation\",\"histnet_hard_T1B_64bins_ablation\"]\n",
+    "row_names = [\"Deepsets (avg)\",\"Deepsets (max)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ (Hard 64 bins)\"]\n",
+    "t1b_table,_=show_results_table(experiment_names,include_std=True,row_names=row_names)\n",
+    "print(t1b_table)\n",
+    "with open(os.path.join(export_dir,'tables/t1b_table_ablation.tex'),'w') as f:\n",
+    "    f.write(t1b_table)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -225,6 +272,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -245,6 +293,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -265,6 +314,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,6 +336,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -396,6 +447,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
