--- a/experiments/paper/results.ipynb
+++ b/experiments/paper/results.ipynb
@@ -215,6 +215,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Results T2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_names = [\"deepsets_avg_T2\",\"deepsets_max_T2\",\"deepsets_median_T2\",\"settransformers_T2\",\"histnet_hard_T2_32bins\"]\n",
+    "row_names = [\"Deepsets (avg)\",\"Deepsets (max)\",\"Deepsets (median)\",\"SetTransformers\",\"HistNetQ (Hard 32 bins)\"]\n",
+    "t2_table,_=show_results_table(experiment_names,include_std=True,row_names=row_names)\n",
+    "print(t2_table)\n",
+    "with open(os.path.join(export_dir,'tables/t2_table.tex'),'w') as f:\n",
+    "    f.write(t2_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Results T1B (Ablation study)\n"
    ]
   },
@@ -533,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   },
   "vscode": {
    "interpreter": {
